--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ migrate_working_dir/
 /build/
 
 # Web related
-lib/generated_plugin_registrant.dart
-lib/core/constants.dart
+# lib/generated_plugin_registrant.dart
+# lib/core/constants.dart
 
 # Symbolication related
 app.*.symbols
